# fyp

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  data_to_sheets.py  form.py  hybrid.py  loaders.py  log.txt  main.py  ml.py  pyproject.toml  requirements.txt  results.py  svd.py  utils.py
cbscraper/: json.txt  product_urls.jsonlines  scrapy.cfg  test.html
cbscraper/cbscraper/: items.py  middlewares.py  pipelines.py  settings.py
cbscraper/cbscraper/spiders/: productbot.py
