[tool.poetry]
name = "fyp"
version = "0.1.0"
description = ""
authors = ["Christy Chan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<=3.10"
black = "^21.12b0"
json-lines = "^0.5.0"
numpy = "^1.22.1"
scrapy-splash = "^0.8.0"
pandas = "^1.4.0"
bokeh = "^2.4.2"
ipywidgets = "^7.6.5"
scipy = "^1.8.0"
scrapy = "^2.5.1"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
