[tool.poetry]
name = "fyp"
version = "0.1.0"
description = ""
authors = ["Christy Chan"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
autogluon = "^0.4.0"
json-lines = "^0.5.0"
numpy = "^1.22.3"
pandas = "<1.4"
scrapy-splash = "^0.8.0"
scipy = "<1.8.0"
streamlit = "^1.9.0"
Scrapy = "^2.6.1"
sib-api-v3-sdk = "^7.4.0"
google-cloud = "^0.34.0"
google-auth-httplib2 = "^0.1.0"
google-cloud-storage = "^2.3.0"
memory-profiler = "^0.60.0"
psrecord = "^1.2"
dataclasses-json = "^0.5.7"
watchdog = "^2.1.8"
pyarrow = "^8.0.0"


[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
